2006-07-22  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.c: Fix split_buffer allocation problem.

2006-07-22  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c, common-src/security-util.c,
	  restore-src/restore.c, server-src/diskfile.c: Fix memory leak found
							by coverity.

2006-07-20  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-scsi.c, changer-src/scsi-changer-driver.c,
	  client-src/amandates.c, client-src/calcsize.c,
	  client-src/selfcheck.c, client-src/sendbackup.c,
	  client-src/sendsize.c, common-src/security-util.c,
	  recover-src/extract_list.c, restore-src/restore.c,
	  server-src/amindexd.c, server-src/diskfile.c,
	  server-src/driver.c, server-src/reporter.c,
	  server-src/tapefile.c, server-src/taper.c: Fix memory leak found
						     by coverity.

2006-07-19  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c : Read client config file.
	* client-src/sendbackup.c: Read client config file.
	* client-src/sendsize.c  : Read client config file.

2006-07-19  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.h (g_option_t): Add 'char *config';
	* amandad-src/amandad_util.c (parse_g_options): Parse 'config='.
	* common-src/amfeatures.h (fe_req_options_config): New amfeature.
	* common-src/amfeatures.c (am_init_feature_set):
						    set fe_req_options_config.
	* server-src/amcheck.c: Send 'config=' in global options.
	* server-src/dumper.c: Send 'config=' in global options.
	* server-src/planner.c: Send 'config=' in global options.

2006-07-19  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: Call dbopen("amandad").
	* changer-src/chg-scsi.c: Call dbopen("server").
	* changer-src/chg-scsi-chio.c: Call dbopen("server").
	* client-src/calcsize.c: Call dbopen("client").
	* client-src/getfsent.c: Call dbopen(NULL).
	* client-src/killpgrp.c: Call dbopen("client").
	* client-src/rundump.c: Call dbopen("client").