@@ -23,7 +23,7 @@
  * Authors: the Amanda Development Team.  Its members are listed in a
  * file named AUTHORS, in the root directory of this distribution.
  */
-/* $Id: taper.c,v 1.140 2006/07/22 12:50:48 martinea Exp $
+/* $Id: taper.c,v 1.141 2006/07/22 23:06:26 martinea Exp $
  *
  * moves files from holding disk to tape, or from a socket to tape
  */
@@ -576,6 +576,7 @@ create_split_buffer(
 		(OFF_T_FMT_TYPE)splitsize, quoted));
 	amfree(splitbuffer_path);
 	amfree(quoted);
+	amfree(buff_err);
 	splitbuf = mmap_splitbuf;
 	splitbuf_wr_ptr = splitbuf;
 	return;
@@ -604,6 +605,7 @@ create_split_buffer(
 	log_add(L_INFO,
 	        "%s: using fallback split size of %dkb to buffer %s in-memory",
 		buff_err, splitsize, id_string);
+	amfree(buff_err);
 	if (splitsize > mem_splitsize) {
 	    amfree(splitbuf);
 	    mem_splitbuf = alloc(fallback_splitsize * 1024);
@@ -1783,8 +1785,8 @@ read_file(
 				      " ", str,
 				      "]",
 				      NULL);
-		q = squote(errstr);
 		if (splitsize == (off_t)0) { /* Ordinary dump */
+		    q = squote(errstr);
 /*@i@*/		    if (first_file.is_partial) {
 			putresult(PARTIAL, "%s %s %d %s\n",
 				  handle, label, filenum, q);
@@ -1796,6 +1798,7 @@ read_file(
 			log_add(L_SUCCESS, "%s %s %s %d %s",
 				hostname, qdiskname, datestamp, level, errstr);
 		    }
+		    amfree(q);
 		} else { /* Chunked dump */
 		    num_splits++;
 		    if (mode == MODE_FILE_WRITE) {
